--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
-AddType video/webm .webm
-AddType video/ogg .ogv
-AddType video/mp4 .mp4
+AddType video/webm webm
+AddType video/ogg ogv
+AddType video/mp4 mp4
